# quick-to-markdown

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/tomarkdown/: __init__.py  cli.py
tests/: __init__.py  generate_fixtures.py  test_conversion.py
tests/fixtures/: test_document.docx
